--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -36,6 +36,16 @@
        </layout>
       </item>
       <item>
+       <widget class="QProgressBar" name="progressBar">
+        <property name="value">
+         <number>0</number>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QTableWidget" name="tableWidget_listaArquivos"/>
       </item>
       <item>
